package bt_java.baitap_a1;

public class hoadonHeader {
    private String MaHoaDon;
    private String TenKH;
    private String NgayBan;

    public hoadonHeader(String maHoaDon, String tenKH, String ngayBan) {
        MaHoaDon = maHoaDon;
        TenKH = tenKH;
        NgayBan = ngayBan;
    }
}
